compiler/tests/en/errors/array_lit_mismatch.salam
// EXPECT: E056
func main:
    a := [1, "two", 3]
end
